--- a/.editorconfig
+++ b/.editorconfig
@@ -3,7 +3,7 @@
 # top-most EditorConfig file
 root = true
 
-[**.{cpp,hpp}]
+[**{.cpp,.hpp,CMakeLists.txt}]
 indent_style = space
 indent_size = 4
 end_of_line = lf
