--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,100 +1,100 @@
-cmake_minimum_required(VERSION 3.17)
+cmake_minimum_required(VERSION 3.20)
 
 project(
     emojicpp
-    VERSION 2.0.1
+    VERSION 3.0.0
     DESCRIPTION "Emoji for C++ developers."
     LANGUAGES CXX
 )
 
-set(CMAKE_EXPORT_COMPILE_COMMANDS True)
+find_program(GPERF_EXECUTABLE gperf)
 
-set(CMAKE_DEBUG_POSTFIX d)
-
-add_library(emojicpp)
-add_library(emojicpp::emojicpp ALIAS emojicpp)
-
-set_target_properties(
-    emojicpp PROPERTIES
-    VERSION ${PROJECT_VERSION}
-    SOVERSION ${PROJECT_VERSION_MAJOR}
+add_custom_command(
+    OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/generated/internal.gperf"
+    COMMAND "${CMAKE_COMMAND}" -E make_directory "${CMAKE_CURRENT_BINARY_DIR}/generated"
+    COMMAND "${CMAKE_COMMAND}" -E cat ${CMAKE_CURRENT_SOURCE_DIR}/src/header.gperf  ${CMAKE_CURRENT_SOURCE_DIR}/src/emoji.gperf > ${CMAKE_CURRENT_BINARY_DIR}/generated/internal.gperf
+    DEPENDS
+        "${CMAKE_CURRENT_SOURCE_DIR}/src/header.gperf"
+        "${CMAKE_CURRENT_SOURCE_DIR}/src/emoji.gperf"
+    COMMENT "Genrating main gperf file"
+    VERBATIM
 )
+
+add_custom_command(
+    OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/generated/internal.hpp"
+    COMMAND ${GPERF_EXECUTABLE} --output-file=${CMAKE_CURRENT_BINARY_DIR}/generated/internal.hpp ${CMAKE_CURRENT_BINARY_DIR}/generated/internal.gperf
+    DEPENDS
+        "${CMAKE_CURRENT_BINARY_DIR}/generated/internal.gperf"
+    COMMENT "Generating gperf header"
+    VERBATIM
+)
+
+add_library(${PROJECT_NAME} STATIC)
+
+target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_23)
 
 target_sources(
-    emojicpp
-    PRIVATE src/emoji.cpp
+    ${PROJECT_NAME}
+    PRIVATE
+        "src/emoji.cpp"
+        "${CMAKE_CURRENT_BINARY_DIR}/generated/internal.hpp"
 )
 
 target_include_directories(
-    emojicpp
-    PRIVATE src
-    PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
+    ${PROJECT_NAME}
+    PRIVATE
+        "${CMAKE_CURRENT_SOURCE_DIR}/src"
+        "${CMAKE_CURRENT_BINARY_DIR}/generated"
+    PUBLIC
+        "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
+        "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>"
 )
 
-include(GenerateExportHeader)
-set_property(
-    TARGET emojicpp
-    PROPERTY CXX_VISIBILITY_PRESET "hidden"
-)
-set_property(
-    TARGET emojicpp
-    PROPERTY VISIBILITY_INLINES_HIDDEN TRUE
+set_source_files_properties(
+    "${CMAKE_CURRENT_BINARY_DIR}/generated/internal.hpp"
+    PROPERTIES
+        GENERATED TRUE
 )
 
-generate_export_header(
-    emojicpp
-    EXPORT_FILE_NAME
-    export/emojicpp/export_emojicpp.hpp
-)
-
-target_include_directories(
-    emojicpp
-    PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/export>
-    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
+set_target_properties(
+    ${PROJECT_NAME}
+    PROPERTIES
+        PUBLIC_HEADER "include/emojicpp/emoji.hpp"
+        DEBUG_POSTFIX "d"
 )
 
 include(GNUInstallDirs)
 
 install(
-    TARGETS emojicpp
-    EXPORT emojicppTargets
-    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+    TARGETS "${PROJECT_NAME}"
+    EXPORT "${PROJECT_NAME}Targets"
+    PUBLIC_HEADER DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}"
+    INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}"
 )
 
-install(DIRECTORY include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
-
 install(
-    FILES "${CMAKE_CURRENT_BINARY_DIR}/export/emojicpp/export_emojicpp.hpp"
-    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/emojicpp
+    EXPORT "${PROJECT_NAME}Targets"
+    FILE "${PROJECT_NAME}Targets.cmake"
+    NAMESPACE ${PROJECT_NAME}::
+    DESTINATION cmake
 )
 
 include(CMakePackageConfigHelpers)
 
 write_basic_package_version_file(
-    "${CMAKE_CURRENT_BINARY_DIR}/emojicppConfigVersion.cmake"
-    VERSION ${PROJECT_VERSION}
-    COMPATIBILITY SameMajorVersion
+    "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake"
+    VERSION "${PROJECT_VERSION}"
+    COMPATIBILITY AnyNewerVersion
 )
 
 configure_package_config_file(
-    "${CMAKE_CURRENT_LIST_DIR}/cmake/emojicppConfig.cmake.in"
-    "${CMAKE_CURRENT_BINARY_DIR}/emojicppConfig.cmake"
-    INSTALL_DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/cmake/emojicpp
+    "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Config.cmake.in"
+    "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake"
+    INSTALL_DESTINATION cmake
 )
 
-install(
-    EXPORT emojicppTargets
-    FILE emojicppTargets.cmake
-    NAMESPACE emojicpp::
-    DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/cmake/emojicpp
-)
-
-install(
-    FILES "${CMAKE_CURRENT_BINARY_DIR}/emojicppConfig.cmake"
-          "${CMAKE_CURRENT_BINARY_DIR}/emojicppConfigVersion.cmake"
-    DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/cmake/emojicpp
+install(FILES
+    "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake"
+    "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake"
+    DESTINATION cmake
 )
